fix: alignment of some elements

--- a/src/components/Markdown/index.module.scss
+++ b/src/components/Markdown/index.module.scss
@@ -24,7 +24,6 @@
 	> * {
 		margin: 0;
 		display: flex;
-		align-items: center;
 	}
 
 	table {
